# comgen

./: README.md  main.py  pyproject.toml
comgen/: __init__.py
comgen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
comgen/constraint_system/: __init__.py  common.py  composition.py  distance.py  nn.py  synthesis.py
comgen/query/: __init__.py  base.py  common.py  ionic.py
comgen/util/: data.py  species.py
data/: reference_perovskites.csv
examples/: run_example.py
examples/Li_ion_conductors/: distance_query.py  starting_materials_query.py
examples/Li_ion_conductors/data/: Li_starting_materials.csv
examples/Mg_ion_conductors/: distance_query.py  like_ratio_query.py  like_ratio_query_2.py  like_ratio_query_3.py
examples/data/: LiIonDatabase.csv  LiIon_reps.csv  perovskite_starting_materials.csv
examples/garnet/: query.py
examples/low_formation_energy/: query.py
examples/output/: example_compositions.txt  garnet_query.txt  li_starting_materials.txt  perovskite_ABX3_candidates.txt
examples/perovskite/: ABX3.py  ASnX3.py
