[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "comgen"
version = "0.0.20"
description = "explore chemical compositions"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pymatgen>=2022.5.26",
    "z3-solver>=4.8.17.0",
    "numpy>=1.21",
]

[project.optional-dependencies]
onnx = ["onnx>=1.15.0"]

[tool.setuptools.package-data]
"comgen.util" = ["data_files/*.json", "data_files/*.txt"]
